--- a/js-curso-2-desafio_3/index.html
+++ b/js-curso-2-desafio_3/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Curso 2 - Desafio 2</title>
+    <title>Curso 2 - Desafio 3</title>
 </head>
 <body>
     <header>
@@ -14,8 +14,8 @@
         <button onclick="exibeIMC()" class="button">Calcular IMC</button>
         <button onclick="exibeFatorial()" class="button">Calcular Fatorial</button>
         <button onclick="exibeReal()" class="button">Converter Dolar em Real</button>
-        <button onclick="obterMedia(10,20,30)" class="button">Média</button>
-        <button onclick="obterMaior(30,20)" class="button">Maior número</button>
+        <button onclick="solicitaAltLarg()" class="button">Calcular Retângulo</button>
+        <button onclick="solicitaAreaPerim()" class="button">Calcular Círculo</button>
         <button onclick="exibeTabuada()" class="button">Tabuada</button>
     </main>
 
